--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "@types/jquery": "^3.3.38",
+    "popper.js": "^1.16.1"
   }
 }
